// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox demo -- checkbox 1`] = `
.c11 {
  vertical-align: baseline;
}

.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c12 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c12 .c9 {
  color: #3555f6;
}

.c6 {
  position: relative;
  margin-bottom: -8px;
}

.c6 .c7,
.c6 .style__RadioTagWrap-sc-25j3mq-3,
.c6 .style__RadioCardWrap-sc-25j3mq-8 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-sc-25j3mq-3:last-child,
.c6 .style__RadioCardWrap-sc-25j3mq-8:last-child {
  margin-right: 0;
}

.c6 .c32+.c32 {
  margin-left: -1px;
}

.c6 .c31 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c6 .c31:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .c31:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c26 {
  margin-right: 8px;
  font-size: 14px;
}

.c27 .c25 {
  color: #526075;
}

.c24 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c24 .c25 {
  color: #3555f6;
}

.c28 .c25 {
  color: #d9d9d9;
}

.c29 .c25 {
  color: #526075;
}

.c30 .c25 {
  color: #526075;
}

.c15 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c17 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c13 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c13:hover {
  border-color: #4683e6;
}

.c13 .c19 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c13 .c21 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c13 .c14 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c13 .c16,
.c13 .c18 {
  line-height: 16px;
}

.c13 .c16 {
  padding-right: 20px;
}

.c13 .c18 {
  padding-left: 20px;
}

.c13 .c16 {
  display: none;
}

.c23 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c23:hover {
  border-color: #4683e6;
}

.c23 .c19 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c23 .c21 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c23 .c14 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c23 .c16,
.c23 .c18 {
  line-height: 16px;
}

.c23 .c16 {
  padding-right: 20px;
}

.c23 .c18 {
  padding-left: 20px;
}

.c23 .c14 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c23 .c19 {
  left: 100%;
  margin-left: -19px;
}

.c23 .c21 {
  background: #9fecc0;
}

.c23 .c18 {
  display: none;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="demo-form uc-fe-form "
  >
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c7 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed c11"
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        styleTyle
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            checked=""
            class="c7 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed c11"
              type="cbox-ed"
            />
            default
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            card
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c13"
        >
          <div
            class="c14 c15"
          >
            <span
              class="c16 c17"
            >
              ON
            </span>
            <span
              class="c18 c17"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        checked
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          checked=""
          class="c23"
        >
          <div
            class="c14 c15"
          >
            <span
              class="c16 c17"
            >
              ON
            </span>
            <span
              class="c18 c17"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      checked=""
      class="uc-fe-checkbox c24"
    >
      <i
        class="c25 uc-fe-checkbox-icon c26 uc-fe-icon icon__checkbox-ed c11"
        type="checkbox-ed"
      />
      checkbox
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-checked 1`] = `
.c3 {
  vertical-align: baseline;
}

.c2 {
  margin-right: 8px;
  font-size: 14px;
}

.c0 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c0 .c1 {
  color: #526075;
}

.c4 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c4 .c1 {
  color: #3555f6;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-checkbox c0"
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox c3"
        type="checkbox"
      />
      unchecked
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      checked=""
      class="uc-fe-checkbox c4"
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox-ed c3"
        type="checkbox-ed"
      />
      checked
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-disabled 1`] = `
.c3 {
  vertical-align: baseline;
}

.c2 {
  margin-right: 8px;
  font-size: 14px;
}

.c0 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c0 .c1 {
  color: #526075;
}

.c5 .c1 {
  color: #3555f6;
}

.c4 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c4 .c1 {
  color: #d9d9d9;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-checkbox c0"
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox c3"
        type="checkbox"
      />
      common
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-checkbox c4"
      disabled=""
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox c3"
        disabled=""
        type="checkbox"
      />
      disabled
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-size 1`] = `
.c3 {
  vertical-align: baseline;
}

.c2 {
  margin-right: 8px;
  font-size: 14px;
}

.c4 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c4 .c1 {
  color: #526075;
}

.c6 .c1 {
  color: #3555f6;
}

.c7 .c1 {
  color: #d9d9d9;
}

.c0 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 22px;
  line-height: 22px;
  font-size: 12px;
}

.c0 .c1 {
  color: #526075;
}

.c5 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 34px;
  line-height: 34px;
  font-size: 12px;
}

.c5 .c1 {
  color: #526075;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-checkbox c0"
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox c3"
        type="checkbox"
      />
      checkbox
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-checkbox c4"
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox c3"
        type="checkbox"
      />
      checkbox
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-checkbox c5"
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox c3"
        type="checkbox"
      />
      checkbox
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-styleType 1`] = `
.c3 {
  vertical-align: baseline;
}

.c6 {
  position: relative;
  padding: 8px 16px;
  line-height: 22px;
  min-height: 22px;
}

.c10 {
  padding: 16px;
  min-height: 20px;
}

.c8 {
  font-size: 16px;
  color: #c3cad9;
  position: absolute;
  right: 12px;
  top: 10px;
}

.c13 {
  font-weight: bold;
  line-height: 16px;
  position: absolute;
  right: 12px;
  top: 10px;
}

.c4 {
  border-radius: 4px;
  overflow: hidden;
  min-width: 150px;
  display: inline-block;
  cursor: pointer;
  border: 1px solid #c3cad9;
}

.c4:hover {
  box-shadow: 0px 2px 4px 0px rgba(228,229,242,1),0px 1px 1px 0px rgba(162,166,191,0.32),0px 1px 0px 0px rgba(223,224,241,0.7);
  border-color: transparent;
}

.c4 .c5 {
  color: #0a1633;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
}

.c4 .c7 {
  border-radius: 50%;
  background: white;
}

.c11 {
  border-radius: 4px;
  overflow: hidden;
  min-width: 150px;
  display: inline-block;
  cursor: pointer;
  border: 1px solid #c3cad9;
  border-color: #4683e6;
  box-shadow: 0px 2px 4px 0px rgba(228,229,242,1),0px 1px 1px 0px rgba(162,166,191,0.32);
}

.c11 .c5 {
  color: #0a1633;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
}

.c11 .c5 {
  color: #3555f6;
  border-color: #4683e6;
}

.c11 .c7 {
  color: #3555f6;
}

.c12 {
  border-radius: 4px;
  overflow: hidden;
  min-width: 150px;
  display: inline-block;
  cursor: pointer;
  border: 1px solid #c3cad9;
  cursor: not-allowed;
  border-color: #d9d9d9;
}

.c12 .c5 {
  color: #0a1633;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
}

.c12 .c5 {
  background: #bbb;
  color: white;
}

.c12 .c9 {
  background: #f7f7f7;
  color: #bbb;
}

.c14 {
  border-radius: 4px;
  overflow: hidden;
  min-width: 150px;
  display: inline-block;
  cursor: pointer;
  border: 1px solid #c3cad9;
  border-color: #4683e6;
  box-shadow: 0px 2px 4px 0px rgba(228,229,242,1),0px 1px 1px 0px rgba(162,166,191,0.32);
  cursor: not-allowed;
}

.c14 .c5 {
  color: #0a1633;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
}

.c14 .c5 {
  color: #3555f6;
  border-color: #4683e6;
}

.c14 .c7 {
  color: #3555f6;
}

.c14 .c7 {
  color: #adbaf3;
}

.c2 {
  margin-right: 8px;
  font-size: 14px;
}

.c0 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c0 .c1 {
  color: #526075;
}

.c15 .c1 {
  color: #3555f6;
}

.c16 .c1 {
  color: #d9d9d9;
}

.c17 .c1 {
  color: #526075;
}

.c18 .c1 {
  color: #526075;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-checkbox c0"
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox c3"
        type="checkbox"
      />
      checkbox
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-undefined c4"
      style="margin-right:8px;"
    >
      <div
        class="c5 c6"
      >
        title
        <i
          class="c7 c8 uc-fe-icon icon__checkbox c3"
          type="checkbox"
        />
      </div>
      <div
        class="c9 c10"
      >
        checkbox
      </div>
    </div>
    <div
      checked=""
      class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-undefined c11"
      style="margin-right:8px;"
    >
      <div
        class="c5 c6"
      >
        title
        <i
          class="c7 c8 uc-fe-icon icon__checkbox-ed c3"
          type="checkbox-ed"
        />
      </div>
      <div
        class="c9 c10"
      >
        checkbox
      </div>
    </div>
    <div
      class="uc-fe-radio uc-fe-radio-disabled uc-fe-radio-size-md uc-fe-radio-styletype-undefined c12"
      disabled=""
      style="margin-right:8px;"
    >
      <div
        class="c5 c6"
      >
        title
        <span
          class="c13"
        >
          售罄
        </span>
      </div>
      <div
        class="c9 c10"
      >
        checkbox
      </div>
    </div>
    <div
      checked=""
      class="uc-fe-radio uc-fe-radio-disabled uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-undefined c14"
      disabled=""
      style="margin-right:8px;"
    >
      <div
        class="c5 c6"
      >
        title
        <span
          class="c13"
        >
          必选
        </span>
      </div>
      <div
        class="c9 c10"
      >
        checkbox
      </div>
    </div>
    <div
      checked=""
      class="uc-fe-radio uc-fe-radio-disabled uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-undefined c14"
      disabled=""
      style="margin-right:8px;"
    >
      <div
        class="c5 c6"
      >
        title
        <i
          class="c7 c8 uc-fe-icon icon__checkbox-ed c3"
          type="checkbox-ed"
        />
      </div>
      <div
        class="c9 c10"
      >
        checkbox
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-uncontrolled 1`] = `
.c3 {
  vertical-align: baseline;
}

.c2 {
  margin-right: 8px;
  font-size: 14px;
}

.c4 .c1 {
  color: #526075;
}

.c0 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c0 .c1 {
  color: #3555f6;
}

.c5 .c1 {
  color: #d9d9d9;
}

.c6 .c1 {
  color: #526075;
}

.c7 .c1 {
  color: #526075;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      checked=""
      class="uc-fe-checkbox c0"
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox-ed c3"
        type="checkbox-ed"
      />
      controlled
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      checked=""
      class="uc-fe-checkbox c0"
    >
      <i
        class="c1 uc-fe-checkbox-icon c2 uc-fe-icon icon__checkbox-ed c3"
        type="checkbox-ed"
      />
      uncontrolled
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- group 1`] = `
.c11 {
  vertical-align: baseline;
}

.c10 {
  margin-right: 8px;
  font-size: 14px;
}

.c8 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c12 {
  color: #6b798e;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c12 .c9 {
  color: #3555f6;
}

.c6 {
  position: relative;
  margin-bottom: -8px;
}

.c6 .c7,
.c6 .style__RadioTagWrap-sc-25j3mq-3,
.c6 .style__RadioCardWrap-sc-25j3mq-8 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-sc-25j3mq-3:last-child,
.c6 .style__RadioCardWrap-sc-25j3mq-8:last-child {
  margin-right: 0;
}

.c6 .c34+.c34 {
  margin-left: -1px;
}

.c6 .c33 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c6 .c33:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .c33:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c27 {
  margin-right: 8px;
  font-size: 14px;
}

.c25 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c25 .c26 {
  color: #526075;
}

.c28 .c26 {
  color: #3555f6;
}

.c29 .c26 {
  color: #d9d9d9;
}

.c30 .c26 {
  color: #526075;
}

.c31 .c26 {
  color: #526075;
}

.c23 .c24,
.c23 .style__CheckboxCardWrap-sc-19o5x2n-2 {
  margin-right: 8px;
}

.c23 .c24:last-child,
.c23 .style__CheckboxCardWrap-sc-19o5x2n-2:last-child {
  margin-right: 0;
}

.c15 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c17 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c13 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c13:hover {
  border-color: #4683e6;
}

.c13 .c19 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c13 .c21 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c13 .c14 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c13 .c16,
.c13 .c18 {
  line-height: 16px;
}

.c13 .c16 {
  padding-right: 20px;
}

.c13 .c18 {
  padding-left: 20px;
}

.c13 .c16 {
  display: none;
}

.c32 .c19 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c32 .c21 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c32 .c14 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c32 .c16,
.c32 .c18 {
  line-height: 16px;
}

.c32 .c16 {
  padding-right: 20px;
}

.c32 .c18 {
  padding-left: 20px;
}

.c32 .c14 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c32 .c19 {
  left: 100%;
  margin-left: -19px;
}

.c32 .c21 {
  background: #9fecc0;
}

.c32 .c18 {
  display: none;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="demo-form uc-fe-form "
  >
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            sm
          </div>
          <div
            checked=""
            class="c7 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed c11"
              type="cbox-ed"
            />
            md
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        styleType
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            checked=""
            class="c7 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c12"
          >
            <i
              class="c9 c10 uc-fe-icon icon__cbox-ed c11"
              type="cbox-ed"
            />
            default
          </div>
          <div
            class="c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c8"
          >
            <i
              class="c9 c10 uc-fe-icon icon__circle c11"
              type="circle"
            />
            card
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="c13"
        >
          <div
            class="c14 c15"
          >
            <span
              class="c16 c17"
            >
              ON
            </span>
            <span
              class="c18 c17"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-form-item c0 uc-fe-row c1"
    >
      <div
        class="uc-fe-form-label c2 c3 uc-fe-col c4"
        span="3"
      >
        value
      </div>
      <div
        class="uc-fe-form-controller c3 uc-fe-col c5"
        span="9"
      >
        <div
          class="uc-fe-checkbox-group c23"
        >
          <span
            class="c24 uc-fe-checkbox c25"
          >
            <i
              class="c26 uc-fe-checkbox-icon c27 uc-fe-icon icon__checkbox c11"
              type="checkbox"
            />
            1
          </span>
          <span
            class="c24 uc-fe-checkbox c25"
          >
            <i
              class="c26 uc-fe-checkbox-icon c27 uc-fe-icon icon__checkbox c11"
              type="checkbox"
            />
            2
          </span>
          <span
            class="c24 uc-fe-checkbox c25"
          >
            <i
              class="c26 uc-fe-checkbox-icon c27 uc-fe-icon icon__checkbox c11"
              type="checkbox"
            />
            3
          </span>
          <span
            class="c24 uc-fe-checkbox c25"
          >
            <i
              class="c26 uc-fe-checkbox-icon c27 uc-fe-icon icon__checkbox c11"
              type="checkbox"
            />
            4
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c23"
    >
      <span
        class="c24 uc-fe-checkbox c25"
      >
        <i
          class="c26 uc-fe-checkbox-icon c27 uc-fe-icon icon__checkbox c11"
          type="checkbox"
        />
        1
      </span>
      <span
        class="c24 uc-fe-checkbox c25"
      >
        <i
          class="c26 uc-fe-checkbox-icon c27 uc-fe-icon icon__checkbox c11"
          type="checkbox"
        />
        2
      </span>
      <span
        class="c24 uc-fe-checkbox c25"
      >
        <i
          class="c26 uc-fe-checkbox-icon c27 uc-fe-icon icon__checkbox c11"
          type="checkbox"
        />
        3
      </span>
      <span
        class="c24 uc-fe-checkbox c25"
      >
        <i
          class="c26 uc-fe-checkbox-icon c27 uc-fe-icon icon__checkbox c11"
          type="checkbox"
        />
        4
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-disabled 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c2 .c3 {
  color: #526075;
}

.c7 .c3 {
  color: #3555f6;
}

.c6 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c6 .c3 {
  color: #d9d9d9;
}

.c8 .c3 {
  color: #526075;
}

.c9 .c3 {
  color: #526075;
}

.c0 .c1,
.c0 .style__CheckboxCardWrap-sc-19o5x2n-2 {
  margin-right: 8px;
}

.c0 .c1:last-child,
.c0 .style__CheckboxCardWrap-sc-19o5x2n-2:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        1
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        2
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        class="c1 uc-fe-checkbox c6"
        disabled=""
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          disabled=""
          type="checkbox"
        />
        1
      </span>
      <span
        class="c1 uc-fe-checkbox c6"
        disabled=""
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          disabled=""
          type="checkbox"
        />
        2
      </span>
      <span
        class="c1 uc-fe-checkbox c6"
        disabled=""
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          disabled=""
          type="checkbox"
        />
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-options 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c2 .c3 {
  color: #526075;
}

.c6 .c3 {
  color: #3555f6;
}

.c7 .c3 {
  color: #d9d9d9;
}

.c8 .c3 {
  color: #526075;
}

.c9 .c3 {
  color: #526075;
}

.c0 .c1,
.c0 .style__CheckboxCardWrap-sc-19o5x2n-2 {
  margin-right: 8px;
}

.c0 .c1:last-child,
.c0 .style__CheckboxCardWrap-sc-19o5x2n-2:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        option-1
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        option-2
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        option-3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        checkbox-1
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        checkbox-2
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        checkbox-3
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-size 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c6 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c6 .c3 {
  color: #526075;
}

.c8 .c3 {
  color: #3555f6;
}

.c9 .c3 {
  color: #d9d9d9;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 22px;
  line-height: 22px;
  font-size: 12px;
}

.c2 .c3 {
  color: #526075;
}

.c7 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 34px;
  line-height: 34px;
  font-size: 12px;
}

.c7 .c3 {
  color: #526075;
}

.c0 .c1,
.c0 .style__CheckboxCardWrap-sc-19o5x2n-2 {
  margin-right: 8px;
}

.c0 .c1:last-child,
.c0 .style__CheckboxCardWrap-sc-19o5x2n-2:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        1
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        2
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        class="c1 uc-fe-checkbox c6"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        1
      </span>
      <span
        class="c1 uc-fe-checkbox c6"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        2
      </span>
      <span
        class="c1 uc-fe-checkbox c6"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        class="c1 uc-fe-checkbox c7"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        1
      </span>
      <span
        class="c1 uc-fe-checkbox c7"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        2
      </span>
      <span
        class="c1 uc-fe-checkbox c7"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-styleType 1`] = `
.c5 {
  vertical-align: baseline;
}

.c10 {
  position: relative;
  padding: 8px 16px;
  line-height: 22px;
  min-height: 22px;
}

.c14 {
  padding: 16px;
  min-height: 20px;
}

.c12 {
  font-size: 16px;
  color: #c3cad9;
  position: absolute;
  right: 12px;
  top: 10px;
}

.c8 {
  border-radius: 4px;
  overflow: hidden;
  min-width: 150px;
  display: inline-block;
  cursor: pointer;
  border: 1px solid #c3cad9;
}

.c8:hover {
  box-shadow: 0px 2px 4px 0px rgba(228,229,242,1),0px 1px 1px 0px rgba(162,166,191,0.32),0px 1px 0px 0px rgba(223,224,241,0.7);
  border-color: transparent;
}

.c8 .c9 {
  color: #0a1633;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
}

.c8 .c11 {
  border-radius: 50%;
  background: white;
}

.c15 .c9 {
  color: #0a1633;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
}

.c15 .c9 {
  color: #3555f6;
  border-color: #4683e6;
}

.c15 .c11 {
  color: #3555f6;
}

.c16 .c9 {
  color: #0a1633;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
}

.c16 .c9 {
  background: #bbb;
  color: white;
}

.c16 .c13 {
  background: #f7f7f7;
  color: #bbb;
}

.c17 .c9 {
  color: #0a1633;
  font-size: 14px;
  border-bottom: 1px solid #c3cad9;
}

.c17 .c9 {
  color: #3555f6;
  border-color: #4683e6;
}

.c17 .c11 {
  color: #3555f6;
}

.c17 .c11 {
  color: #adbaf3;
}

.c18 .c23,
.c18 .style__RadioTagWrap-sc-25j3mq-3,
.c18 .c7 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c18 .c23:last-child,
.c18 .style__RadioTagWrap-sc-25j3mq-3:last-child,
.c18 .c7:last-child {
  margin-right: 0;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c2 .c3 {
  color: #526075;
}

.c19 .c3 {
  color: #3555f6;
}

.c20 .c3 {
  color: #d9d9d9;
}

.c21 .c3 {
  color: #526075;
}

.c22 .c3 {
  color: #526075;
}

.c0 .c1,
.c0 .c6 {
  margin-right: 8px;
}

.c0 .c1:last-child,
.c0 .c6:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        1
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        2
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <div
        class="c6 c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-undefined c8"
      >
        <div
          class="c9 c10"
        >
          <i
            class="c11 c12 uc-fe-icon icon__checkbox c5"
            type="checkbox"
          />
        </div>
        <div
          class="c13 c14"
        >
          1
        </div>
      </div>
      <div
        class="c6 c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-undefined c8"
      >
        <div
          class="c9 c10"
        >
          <i
            class="c11 c12 uc-fe-icon icon__checkbox c5"
            type="checkbox"
          />
        </div>
        <div
          class="c13 c14"
        >
          2
        </div>
      </div>
      <div
        class="c6 c7 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-undefined c8"
      >
        <div
          class="c9 c10"
        >
          <i
            class="c11 c12 uc-fe-icon icon__checkbox c5"
            type="checkbox"
          />
        </div>
        <div
          class="c13 c14"
        >
          3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-uncontrolled 1`] = `
.c5 {
  vertical-align: baseline;
}

.c4 {
  margin-right: 8px;
  font-size: 14px;
}

.c2 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c2 .c3 {
  color: #526075;
}

.c6 {
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  font-size: 12px;
}

.c6 .c3 {
  color: #3555f6;
}

.c7 .c3 {
  color: #d9d9d9;
}

.c8 .c3 {
  color: #526075;
}

.c9 .c3 {
  color: #526075;
}

.c0 .c1,
.c0 .style__CheckboxCardWrap-sc-19o5x2n-2 {
  margin-right: 8px;
}

.c0 .c1:last-child,
.c0 .style__CheckboxCardWrap-sc-19o5x2n-2:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        1
      </span>
      <span
        checked=""
        class="c1 uc-fe-checkbox c6"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox-ed c5"
          type="checkbox-ed"
        />
        2
      </span>
      <span
        checked=""
        class="c1 uc-fe-checkbox c6"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox-ed c5"
          type="checkbox-ed"
        />
        3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-checkbox-group c0"
    >
      <span
        checked=""
        class="c1 uc-fe-checkbox c6"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox-ed c5"
          type="checkbox-ed"
        />
        1
      </span>
      <span
        class="c1 uc-fe-checkbox c2"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox c5"
          type="checkbox"
        />
        2
      </span>
      <span
        checked=""
        class="c1 uc-fe-checkbox c6"
      >
        <i
          class="c3 uc-fe-checkbox-icon c4 uc-fe-icon icon__checkbox-ed c5"
          type="checkbox-ed"
        />
        3
      </span>
    </div>
  </div>
</div>
`;
